[package]
name = "rust_lsp"
version = "0.6.0"
authors = ["Bruno Medeiros <bruno.do.medeiros@gmail.com>"]

description = "A library for working with the Language Server Protocol, as either client or server."
repository = "https://github.com/RustDT/rustlsp"
documentation = "https://docs.rs/rustlsp"
license = "Apache-2.0"
keywords = ["rustlsp", "lsp"]

[dependencies]
rustdt_util = "0.2.3"
rustdt-json_rpc = { git = "https://github.com/Strum355/rustdt-json_rpc", branch = "serde-1.0" }
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
lsp-types = { git = "https://github.com/gluon-lang/lsp-types", branch = "master"}

[lib]
name = "rust_lsp"
path = "src/lib.rs"
